# Paparfetch

./: .gitignore  README.md  get_papers_list.py  pyproject.toml
src/get_papers/: cli.py  main.py
tests/: test_main_email_extract.py  test_main_paper_details.py  test_main_pubmubIds.py
